# [1.6.x] - 2019-05-07

## New

revamped modals:

- added scroll inside modal
- centering checked
- added shadows in case of long content
- added anim out
- cleanup, positionning, RTL tests, comments)

Others:

- added `no-pointer-events` helper class


# [1.6.3] - 2019-05-03

## New

- manage a list of notifications
- added flexbox helper `flex-items-center`


# [1.6.2] - 2019-05-03

## Updated/fixes

- Update theme scss files for WebPack.


# [1.6.1] - 2019-05-02

## New

- added password revealer in forms
- new icons

## Updated/fixes

- Fix documentation of Sass partials


# [1.6.0] - 2019-05-01

## New

- added CSS custom properties
- added generation of static CSS files for themes surcharge
- added previsualisation in Design system website
- added documentation for all of these
- added `pm-field--tiny` modifier

## Updated/fixes

- Fix mismatch for `pm-button--link` when used with `pm-button`
- also fixed layout of top nav #95


## Misc

- remove IE11 support for space bar (fuck off inline-styles 🎉 )
- removed 'unsafe-inline' for CSS for design system website



# [1.5.18] - 2019-04-25

## New

- added pagination drop down
- added button drop down
- added class `.increase-surface-click` class (needed for pagination drop down, and could be used for other cases, to increase tap zone)
- add `rotateX-180` helper

## Updated/fixes

- fixed documentation in group buttons


# [1.5.17] - 2019-04-24

## New

- add `prefers-reduced-motion: reduce` MQ (for vestibular disorder)

## Updated/fixes

- set up max width for input/select/textarea
- fix select text overflow
- updated `ng-valid` to `is-valid` (byebye Angular)
- fix `pm-label` alignment


# [1.5.16] - 2019-04-18

## New

- add warning styles for input (contrast to enhance)


# [1.5.15] - 2019-04-17

## New

- add error styles (using `aria-invalid="true"` and CSS transforms)
- add `details`/`summary` styles
- add `scroll-smooth-touch` class

## Updated/fixes
