@@ -57,6 +57,24 @@ section: design
   </div>
 </div>
 
+<div class="flex flex-spacebetween mb2 onmobile-flex-column">
+  <div class="w49 pt0-5">
+    <div class="border-bottom">
+      <div class="p1">
+        The same container, but only with bottom border.
+      </div>
+    </div>
+  </div>
+  <div class="w49 aligncenter flex-self-vcenter">
+    <pre class=" language-markup"><code>&lt;div class="border-bottom"&gt;
+  &lt;div class="p1"&gt;
+    The same container, but only with bottom border.
+  &lt;/div&gt;
+&lt;/div&gt;
+</code></pre>
+  </div>
+</div>
+
 
 <h2>“Domain” breadcrumb</h2>
 
