@@ -8,11 +8,12 @@ revamped modals:
 - centering checked
 - added shadows in case of long content
 - added anim out
-- cleanup, positionning, RTL tests, comments)
+- cleanup, positionning, RTL tests, comments
 
 Others:
 
 - added `no-pointer-events` helper class
+- added `border-bottom` helper class
 
 
 # [1.6.3] - 2019-05-03
